--- a/tp4/src/main/resources/application.yml
+++ b/tp4/src/main/resources/application.yml
@@ -10,10 +10,10 @@ spring:
     prefix: classpath:/templates/
     suffix: .html
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:bootapp;DB_CLOSE_DELAY=-1
-    username: sa
-    password: password
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://postgresql-545250.user-arthurbulle:5432/defaultdb
+    username: user-arthurbulle
+    password: 2er5fus2x8nw6n6ojuoa
   jpa:
     hibernate:
       ddl-auto: update
@@ -24,6 +24,7 @@ spring:
     init:
       mode: always
       data-locations: classpath:data.sql
+
 logging:
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} %clr(%-5level) %clr(%-36logger{36}){cyan} %msg%n"
